projet_gl/src/test/deca/context/valid/3_39/3_39_2_Cast.deca
// Description:
//    Programme faisant un Cast avec retourne type de float et int
//
// Resultats:
//
// Historique:
//    cree le 17/01/2024

class A {
    int x = 2;
    int getX(){
        return x;
    }
}

{
    float n = 1.33;
    A a = new A();
    float somme = n + a.getX();
}
