projet_gl/src/test/deca/context/invalid/3_42/3_42_New.deca
// Description:
//    Problème d'utilisation de New avec une non-classe
//
// Resultats:
//    Ligne 11: Type error : should be a class type
//
// Historique:
//    cree le 17/01/2024

class A {}

{
    A a = new int();
}